examples/test/testpolicy11657.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11657
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key0: value6
      key37: value39
      key47: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value45
      podSelector:
        matchLabels:
          key18: value21
          key0: value4
